# ChangeLog for net-dialup/kpnadsl4linux
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/kpnadsl4linux/ChangeLog,v 1.18 2013/06/25 10:17:47 ago Exp $

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kpnadsl4linux-1.11.ebuild:
  Stable for ppc64, wrt bug #470538

  26 May 2013; Agostino Sarubbo <ago@gentoo.org> kpnadsl4linux-1.11.ebuild:
  Stable for ppc, wrt bug #470538

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> kpnadsl4linux-1.11.ebuild:
  Stable for x86, wrt bug #470538

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> kpnadsl4linux-1.11.ebuild:
  Stable for amd64, wrt bug #470538

*kpnadsl4linux-1.11 (14 Apr 2013)

  14 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> +kpnadsl4linux-1.11.ebuild,
  +files/kpnadsl4linux-1.11-Makefile.patch:
  Version bump: EAPI 5, epatch_user, show post-installation message only at
  first install. Respect CC, CFLAGS and LDFLAGS variables, wrt bug #336109

  12 Mar 2006; Alin Nastac <mrness@gentoo.org> kpnadsl4linux-1.10-r1.ebuild:
  Simplify dependencies and quote $FILESDIR.

  04 Oct 2005; Alin Nastac <mrness@gentoo.org> kpnadsl4linux-1.10-r1.ebuild:
  Remove INSTALL and COPYING from docs.

  09 Sep 2005; Tom Gall <tgall@gentoo.org> kpnadsl4linux-1.10-r1.ebuild:
  stable on ppc64

  14 Apr 2005; Tom Gall <tgall@gentoo.org> kpnadsl4linux-1.10-r1.ebuild:
  added ~ppc64, bug #89139

  07 Nov 2004; Alin Nastac <mrness@gentoo.org>
  kpnadsl4linux-1.10-r1.ebuild:
  include etc-update in the info message (#46985)
  add DEPEND to RDEPEND
  
  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  kpnadsl4linux-1.10-r1.ebuild:
  virtual/glibc -> virtual/libc

  19 Nov 2003; Heinrich Wendel <lanius@gentoo.org> metadata.xml:
  metadata.xml

*kpnadsl4linux-1.10-r1 (23 May 2003)
  23 May 2003; Chuck Brewer <killian@gentoo.org>:
  Added manifest.

*kpnadsl4linux-1.10-r1 (02 Jan 2003)

  02 Jan 2003; Hannes Mehnert <hannes@gentoo.org> kpnadsl4linux-1.10-r1.ebuild: