@@ -1,6 +1,10 @@
 # ChangeLog for net-dialup/kpnadsl4linux
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/kpnadsl4linux/ChangeLog,v 1.18 2013/06/25 10:17:47 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/kpnadsl4linux/ChangeLog,v 1.19 2014/08/10 20:55:54 slyfox Exp $
+
+  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
+  kpnadsl4linux-1.10-r1.ebuild:
+  QA: drop trailing '.' from DESCRIPTION
 
   25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kpnadsl4linux-1.11.ebuild:
   Stable for ppc64, wrt bug #470538
